syntax = "proto3";

package juno.file_service.config;

import "identifiers.proto";

service BucketBucketDbService {
  rpc getBucket(GetBucketRequest) returns (Bucket);
  rpc createBucket(CreateBucketRequest) returns (Bucket);
  rpc deleteBucket(DeleteBucketRequest) returns (Bucket);
  rpc updateBucket(UpdateBucketRequest) returns (Bucket);
}

message Bucket {}

message GetBucketRequest {}

message CreateBucketRequest {}

message UpdateBucketRequest {}

message DeleteBucketRequest {}
